--- a/index.html
+++ b/index.html
@@ -75,10 +75,14 @@
                             </div>
                         </section>
                         <section class="user-x">
-                            <img src="images/phil-s.jpg" alt="foto-user">
-                            <h4>Phil K</h4>
-                            <img src="icons/accept-circle.png" alt="icon-accept">
-                            <img src="icons/close-circle.png" alt="icons-close">
+                            <div class="user-name">
+                                <img src="images/phil-s.jpg" alt="foto-user">
+                                <h4>Phil K</h4>
+                            </div>
+                            <div class="acceptornot">
+                                <img src="icons/accept-circle.png" alt="icon-accept">
+                                <img src="icons/close-circle.png" alt="icons-close">
+                            </div>
                         </section>
                     </div>
                 </section>
@@ -88,19 +92,19 @@
                         <h3>Your Connections</h3>
                     </section>
                     <div class="people">
-                        <section class="user-x">
+                        <section class="user-name">
                             <img src="images/adrien-s.jpg" alt="foto-user">
                             <h4>Adrien D</h4>
                         </section>
-                        <section class="user-x">
+                        <section class="user-name">
                             <img src="images/anne-s.jpg" alt="foto-user">
                             <h4>Anne J</h4>
                         </section>
-                        <section class="user-x">
+                        <section class="user-name">
                             <img src="images/alayne-s.jpg" alt="foto-user">
                             <h4>Alayne T</h4>
                         </section>
-                        <section class="user-x">
+                        <section class="user-name">
                             <img src="images/arry-s.jpg" alt="foto-user">
                             <h4>Arry Y</h4>
                         </section>
